修改增加问题功能
